Fixed the clipping issue
I just forced the z index of the freespace to 2 to start, and that solved it. Phew!

[Ticket: X]

--- a/css/style.css
+++ b/css/style.css
@@ -169,6 +169,9 @@ td:hover {
   }
 }
 
+#freeSpace {
+  z-index: 2;
+}
 .victory {
   background: url("../img/logo.png");
   background-color: lightblue;
@@ -184,13 +187,11 @@ td:hover {
   0% {
     transform: scale(1.2);
     opacity: 0.8;
-    z-index: 2;
     padding-top: 20px;
   }
   100% {
     transform: scale(5.2);
     opacity: 1;
-    z-index: 2;
     box-shadow: none;
     white-space: pre-line;
     padding-top: 20px;
